@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-09-15T01:11:07Z",
+  "timestamp" : "2024-09-17T00:28:30Z",
   "count_outdated" : 497,
   "uniques_outdated" : 324,
-  "count" : 500,
-  "uniques" : 327,
+  "count" : 501,
+  "uniques" : 328,
   "clones" : [
     {
       "timestamp": "2024-09-06T00:00:00Z",
@@ -22,6 +22,15 @@
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2024-09-16T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
