@@ -1,6 +1,6 @@
 {
-  "count": 3,
-  "uniques": 3,
+  "count": 4,
+  "uniques": 4,
   "clones": [
     {
       "timestamp": "2024-09-06T00:00:00Z",
@@ -11,6 +11,11 @@
       "timestamp": "2024-09-14T00:00:00Z",
       "count": 2,
       "uniques": 2
+    },
+    {
+      "timestamp": "2024-09-16T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
